Update Ecommerce Website Trending Blogs Section.html

--- a/responsive-features/Ecommerce Website Trending Blogs Section/Ecommerce Website Trending Blogs Section.html
+++ b/responsive-features/Ecommerce Website Trending Blogs Section/Ecommerce Website Trending Blogs Section.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h1>Trending Blogs</h1>
+                <h1 style="font-size:38px;" class="mb-md-4 mt-md-2">Trending Blogs</h1>
             </div>
             <div class="col-12 col-lg-6 col-md-12 shadow">
                 <div class="card">
