Update Ecommerce Website Contact Us Section.html

--- a/Ecommerce Website Contact Us Section/Ecommerce Website Contact Us Section.html
+++ b/Ecommerce Website Contact Us Section/Ecommerce Website Contact Us Section.html
@@ -16,7 +16,7 @@
                 </div>
                 <button >Contact us</button>
             </div>
-        </diuv>
+        </div>
     </div>
   </body>
 </html>
